--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Module 2</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 </head>
 
